--- a/Application/ARQuiz/app/src/main/AndroidManifest.xml
+++ b/Application/ARQuiz/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lepko.martin.arquiz">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-feature android:name="android.hardware.camera" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +31,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".CameraAR.CameraActivity" />
-        <activity android:name=".CameraAR.OpenGLRenderer"></activity>
+        <activity android:name=".CameraAR.OpenGLRenderer" />
+        <activity android:name=".LocationActivity"></activity>
     </application>
 
 </manifest>
