WEBCLIENT - added web client, creation of competition, registration, login

--- a/Application/ARQuiz/app/build.gradle
+++ b/Application/ARQuiz/app/build.gradle
@@ -5,7 +5,7 @@ def NATIVE_LIB_DIR = 'build/lib'
 def JAR_DIR = 'build/java/vuforia'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "24.0.2"
 
     sourceSets.main {
@@ -37,8 +37,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
+    compile 'com.android.support:support-v4:25.1.0'
 }
