--- a/Application/ARQuiz/app/src/main/AndroidManifest.xml
+++ b/Application/ARQuiz/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".CameraAR.CameraActivity" />
         <activity android:name=".CameraAR.OpenGLRenderer" />
-        <activity android:name=".LocationActivity"></activity>
+        <activity android:name=".LocationActivity" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
